# asound

./: ASound.pro  CMakeLists.txt
include/: asound-log.h  asound.h  asound_global.h
src/: asound-log.cpp  asound.cpp
